--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-distance-matrix": "^1.1.1",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
     "socket.io": "^3.1.0"
