--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "edwardoboh",
   "license": "MIT",
   "dependencies": {
-    "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-distance-matrix": "^1.1.1",
     "mongoose": "^5.11.13",
-    "nodemon": "^2.0.7",
+    "node-geocoder": "^3.27.0",
     "socket.io": "^3.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.12"
   }
 }
